--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -47,7 +47,7 @@
             tools:text="@string/dummy_title" />
 
         <include
-            android:id="@+id/layout_genres"
+            android:id="@+id/layout_genre"
             layout="@layout/layout_genres"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -61,9 +61,11 @@
             layout="@layout/layout_video"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layout_genres" />
+            app:layout_constraintTop_toBottomOf="@id/layout_genre"
+            tools:visibility="visible" />
 
         <include
             android:id="@+id/layout_detail"
