--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -5,6 +5,7 @@
     android:layout_width="150dp"
     android:layout_height="100dp"
     android:layout_marginHorizontal="4dp"
+    android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,6 +27,7 @@
             android:id="@+id/imageView3"
             android:layout_width="32dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
